versioned_docs/version-2.x/faq.md
---
description: ZenStack FAQ.

slug: /faq
sidebar_label: FAQ
sidebar_position: 100
---

# 🙋🏻 FAQ

### Is ZenStack implemented with Postgres RLS (row-level-security)?

No, it is not implemented with Postgres RLS. Instead, ZenStack applies access control rules by injecting into Prisma's query arguments and (in certain scenarios) conducting post-query filtering. The choice brings several benefits:

1. Database agnostic: ZenStack works with any database that Prisma supports.
1. No need to create migrations when changing access control rules.
1. A significantly simpler syntax for access control rules compared to SQL RLS.
1. Collocating access control rules with the data model.

### Does using ZenStack introduce more connections to my databases?

No. It's common to create enhanced PrismaClient wrappers per request (for binding to different user identity). Under the hood all such wrappers share the same PrismaClient instance and thus the same database connection.

### Is ZenStack framework-agnostic?

Yes, ZenStack is framework-agnostic. The core of ZenStack's runtime is a transparent proxy wrapping a PrismaClient, so it can be used in any framework that can run Prisma. ZenStack already provides adapters for popular frameworks like [Next.js](./reference/server-adapters/next) and [Fastify](./reference/server-adapters/fastify), and more are being made. It's also easy to write your own adapters.

### How to use ZenStack in a monorepo setup?

To use ZenStack in a monorepo setup (e.g., pnpm workspace), run `zenstack init` in the package where `schema.prisma` resides (usually also where the global `prisma` instance is exported). There's no need to install ZenStack-related packages at the workspace level.

### Is ZModel fully compatible with Prisma Schema?

The ZModel language is designed to be a superset of Prisma Schema. The major extension that ZModel made to Prisma schema today are:

-   [Custom attributes](./reference/zmodel-language#custom-attributes-and-functions)
-   [Plugins](./category/plugins)

Using a separate DSL gives us the flexibility to add more extensions in the future; however, the goal is to maintain the "superset" positioning, i.e., every valid `schema.prisma` is a valid `schema.zmodel`.

In practice, you may run into problems that the `schema.prisma` generated by ZenStack triggers validation errors in `prisma` CLI. This is because Prisma CLI has many validation rules, some quite subtle. We try to replicate those rules in `zenstack` CLI, but it's more of a best-effort approach. Fortunately, the errors reported by `prisma` CLI usually give pretty good hints on what to change in `schema.zmodel`.

We will continue improving the parity between ZModel and Prisma Schema regarding validation rules.

### Does ZenStack require a specific Prisma version?

No. ZenStack references Prisma as a peer dependency and works with Prisma 5.0.0 and above.

### Does ZenStack work with Prisma migration?

Yes. When you run `zenstack generate` it generates a standard Prisma schema file that can be used with Prisma migration.

### Are there any other IDE integrations besides VSCode?

Yes, ZenStack has integrations with VSCode and JetBrains IDEs. Please see [here](./guides/ide) for ore details.

### Does ZenStack work with Prisma Client Extensions?

The short answer is it works in most cases. Please refer to [this guide](./guides/client-extensions) for more details.

### Does the order in which access policies are defined matter?

No. See [here](./the-complete-guide/part1/4-access-policy/4.1-model-level.md#evaluation-of-model-level-policies) for how access policies are evaluated.

### Is Prisma's new "prisma-client" generator supported?

Yes, since v2.16.0. The "prisma-client" generator is introduced in [Prisma 6.6](https://github.com/prisma/prisma/releases/tag/6.6.0). When it's used, Prisma requires you to specify an output folder explicitly, and will generate TypeScript source files (instead of compiled JavaScript files) into the folder. The files should be compiled with your source tree, and you should import `PrismaClient` from that folder instead of `@prisma/client`.

Similarly, you'll need to use the "--output" option when running `zenstack generate` to generate ZenStack files into your source tree and get them compiled together with your source code. And you should import the `enhance` function from there.

ZModel:
```zmodel
generator client {
  provider = "prisma-client"
  output   = "../generated/prisma/client"
  moduleFormat = "cjs"
}
```

Running `zenstack generate`:
```bash
npx zenstack generate --output ./generated/zenstack
```

App code:
```ts
import { PrismaClient } from './generated/prisma/client';
import { enhance } from './generated/zenstack/enhance';

const prisma = new PrismaClient();
const db = enhance(prisma, ...);
```
